eoxserver/services/ecql/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    feet
    meters
    statute miles
    nautical miles
    kilometers

Grammar

Rule 0     S' -> condition_or_empty
Rule 1     condition_or_empty -> condition
Rule 2     condition_or_empty -> empty
Rule 3     condition -> predicate
Rule 4     condition -> condition AND condition
Rule 5     condition -> condition OR condition
Rule 6     condition -> NOT condition
Rule 7     condition -> LPAREN condition RPAREN
Rule 8     condition -> LBRACKET condition RBRACKET
Rule 9     predicate -> expression EQ expression
Rule 10    predicate -> expression NE expression
Rule 11    predicate -> expression LT expression
Rule 12    predicate -> expression LE expression
Rule 13    predicate -> expression GT expression
Rule 14    predicate -> expression GE expression
Rule 15    predicate -> expression NOT BETWEEN expression AND expression
Rule 16    predicate -> expression BETWEEN expression AND expression
Rule 17    predicate -> expression NOT LIKE QUOTED
Rule 18    predicate -> expression LIKE QUOTED
Rule 19    predicate -> expression NOT ILIKE QUOTED
Rule 20    predicate -> expression ILIKE QUOTED
Rule 21    predicate -> expression NOT IN LPAREN expression_list RPAREN
Rule 22    predicate -> expression IN LPAREN expression_list RPAREN
Rule 23    predicate -> expression IS NOT NULL
Rule 24    predicate -> expression IS NULL
Rule 25    predicate -> temporal_predicate
Rule 26    predicate -> spatial_predicate
Rule 27    temporal_predicate -> expression BEFORE TIME
Rule 28    temporal_predicate -> expression BEFORE OR DURING time_period
Rule 29    temporal_predicate -> expression DURING time_period
Rule 30    temporal_predicate -> expression DURING OR AFTER time_period
Rule 31    temporal_predicate -> expression AFTER TIME
Rule 32    time_period -> TIME DIVIDE TIME
Rule 33    time_period -> TIME DIVIDE DURATION
Rule 34    time_period -> DURATION DIVIDE TIME
Rule 35    spatial_predicate -> INTERSECTS LPAREN expression COMMA expression RPAREN
Rule 36    spatial_predicate -> DISJOINT LPAREN expression COMMA expression RPAREN
Rule 37    spatial_predicate -> CONTAINS LPAREN expression COMMA expression RPAREN
Rule 38    spatial_predicate -> WITHIN LPAREN expression COMMA expression RPAREN
Rule 39    spatial_predicate -> TOUCHES LPAREN expression COMMA expression RPAREN
Rule 40    spatial_predicate -> CROSSES LPAREN expression COMMA expression RPAREN
Rule 41    spatial_predicate -> OVERLAPS LPAREN expression COMMA expression RPAREN
Rule 42    spatial_predicate -> EQUALS LPAREN expression COMMA expression RPAREN
Rule 43    spatial_predicate -> RELATE LPAREN expression COMMA expression COMMA QUOTED RPAREN
Rule 44    spatial_predicate -> DWITHIN LPAREN expression COMMA expression COMMA number COMMA UNITS RPAREN
Rule 45    spatial_predicate -> BEYOND LPAREN expression COMMA expression COMMA number COMMA UNITS RPAREN
Rule 46    spatial_predicate -> BBOX LPAREN expression COMMA number COMMA number COMMA number COMMA number COMMA QUOTED RPAREN
Rule 47    expression_list -> expression_list COMMA expression
Rule 48    expression_list -> expression
Rule 49    expression -> expression PLUS expression
Rule 50    expression -> expression MINUS expression
Rule 51    expression -> expression TIMES expression
Rule 52    expression -> expression DIVIDE expression
Rule 53    expression -> LPAREN expression RPAREN
Rule 54    expression -> LBRACKET expression RBRACKET
Rule 55    expression -> GEOMETRY
Rule 56    expression -> ENVELOPE
Rule 57    expression -> attribute
Rule 58    expression -> QUOTED
Rule 59    expression -> INTEGER
Rule 60    expression -> FLOAT
Rule 61    number -> INTEGER
Rule 62    number -> FLOAT
Rule 63    attribute -> ATTRIBUTE
Rule 64    empty -> <empty>

Terminals, with rules where they appear

AFTER                : 30 31
AND                  : 4 15 16
ATTRIBUTE            : 63
BBOX                 : 46
BEFORE               : 27 28
BETWEEN              : 15 16
BEYOND               : 45
COMMA                : 35 36 37 38 39 40 41 42 43 43 44 44 44 45 45 45 46 46 46 46 46 47
CONTAINS             : 37
CROSSES              : 40
DISJOINT             : 36
DIVIDE               : 32 33 34 52
DURATION             : 33 34
DURING               : 28 29 30
DWITHIN              : 44
ENVELOPE             : 56
EQ                   : 9
EQUALS               : 42
FLOAT                : 60 62
GE                   : 14
GEOMETRY             : 55
GT                   : 13
ILIKE                : 19 20
IN                   : 21 22
INTEGER              : 59 61
INTERSECTS           : 35
IS                   : 23 24
LBRACKET             : 8 54
LE                   : 12
LIKE                 : 17 18
LPAREN               : 7 21 22 35 36 37 38 39 40 41 42 43 44 45 46 53
LT                   : 11
MINUS                : 50
NE                   : 10
NOT                  : 6 15 17 19 21 23
NULL                 : 23 24
OR                   : 5 28 30
OVERLAPS             : 41
PLUS                 : 49
QUOTED               : 17 18 19 20 43 46 58
RBRACKET             : 8 54
RELATE               : 43
RPAREN               : 7 21 22 35 36 37 38 39 40 41 42 43 44 45 46 53
TIME                 : 27 31 32 32 33 34
TIMES                : 51
TOUCHES              : 39
UNITS                : 44 45
WITHIN               : 38
error                : 
feet                 : 
kilometers           : 
meters               : 
nautical miles       : 
statute miles        : 

Nonterminals, with rules where they appear

attribute            : 57
condition            : 1 4 4 5 5 6 7 8
condition_or_empty   : 0
empty                : 2
expression           : 9 9 10 10 11 11 12 12 13 13 14 14 15 15 15 16 16 16 17 18 19 20 21 22 23 24 27 28 29 30 31 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 47 48 49 49 50 50 51 51 52 52 53 54
expression_list      : 21 22 47
number               : 44 45 46 46 46 46
predicate            : 3
spatial_predicate    : 26
temporal_predicate   : 25
time_period          : 28 29 30

Parsing method: LALR

state 0

    (0) S' -> . condition_or_empty
    (1) condition_or_empty -> . condition
    (2) condition_or_empty -> . empty
    (3) condition -> . predicate
    (4) condition -> . condition AND condition
    (5) condition -> . condition OR condition
    (6) condition -> . NOT condition
    (7) condition -> . LPAREN condition RPAREN
    (8) condition -> . LBRACKET condition RBRACKET
    (64) empty -> .
    (9) predicate -> . expression EQ expression
    (10) predicate -> . expression NE expression
    (11) predicate -> . expression LT expression
    (12) predicate -> . expression LE expression
    (13) predicate -> . expression GT expression
    (14) predicate -> . expression GE expression
    (15) predicate -> . expression NOT BETWEEN expression AND expression
    (16) predicate -> . expression BETWEEN expression AND expression
    (17) predicate -> . expression NOT LIKE QUOTED
    (18) predicate -> . expression LIKE QUOTED
    (19) predicate -> . expression NOT ILIKE QUOTED
    (20) predicate -> . expression ILIKE QUOTED
    (21) predicate -> . expression NOT IN LPAREN expression_list RPAREN
    (22) predicate -> . expression IN LPAREN expression_list RPAREN
    (23) predicate -> . expression IS NOT NULL
    (24) predicate -> . expression IS NULL
    (25) predicate -> . temporal_predicate
    (26) predicate -> . spatial_predicate
    (49) expression -> . expression PLUS expression
    (50) expression -> . expression MINUS expression
    (51) expression -> . expression TIMES expression
    (52) expression -> . expression DIVIDE expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . LBRACKET expression RBRACKET
    (55) expression -> . GEOMETRY
    (56) expression -> . ENVELOPE
    (57) expression -> . attribute
    (58) expression -> . QUOTED
    (59) expression -> . INTEGER
    (60) expression -> . FLOAT
    (27) temporal_predicate -> . expression BEFORE TIME
    (28) temporal_predicate -> . expression BEFORE OR DURING time_period
    (29) temporal_predicate -> . expression DURING time_period
    (30) temporal_predicate -> . expression DURING OR AFTER time_period
    (31) temporal_predicate -> . expression AFTER TIME
    (35) spatial_predicate -> . INTERSECTS LPAREN expression COMMA expression RPAREN
    (36) spatial_predicate -> . DISJOINT LPAREN expression COMMA expression RPAREN
    (37) spatial_predicate -> . CONTAINS LPAREN expression COMMA expression RPAREN
    (38) spatial_predicate -> . WITHIN LPAREN expression COMMA expression RPAREN
    (39) spatial_predicate -> . TOUCHES LPAREN expression COMMA expression RPAREN
    (40) spatial_predicate -> . CROSSES LPAREN expression COMMA expression RPAREN
    (41) spatial_predicate -> . OVERLAPS LPAREN expression COMMA expression RPAREN
    (42) spatial_predicate -> . EQUALS LPAREN expression COMMA expression RPAREN
    (43) spatial_predicate -> . RELATE LPAREN expression COMMA expression COMMA QUOTED RPAREN
    (44) spatial_predicate -> . DWITHIN LPAREN expression COMMA expression COMMA number COMMA UNITS RPAREN
    (45) spatial_predicate -> . BEYOND LPAREN expression COMMA expression COMMA number COMMA UNITS RPAREN
    (46) spatial_predicate -> . BBOX LPAREN expression COMMA number COMMA number COMMA number COMMA number COMMA QUOTED RPAREN
    (63) attribute -> . ATTRIBUTE

    NOT             shift and go to state 28
    LPAREN          shift and go to state 20
    LBRACKET        shift and go to state 6
    $end            reduce using rule 64 (empty -> .)
    GEOMETRY        shift and go to state 25
    ENVELOPE        shift and go to state 18
    QUOTED          shift and go to state 17
    INTEGER         shift and go to state 12
    FLOAT           shift and go to state 27
    INTERSECTS      shift and go to state 3
    DISJOINT        shift and go to state 8
    CONTAINS        shift and go to state 24
    WITHIN          shift and go to state 14
    TOUCHES         shift and go to state 5
    CROSSES         shift and go to state 7
    OVERLAPS        shift and go to state 1
    EQUALS          shift and go to state 23
    RELATE          shift and go to state 11
    DWITHIN         shift and go to state 10
    BEYOND          shift and go to state 21
    BBOX            shift and go to state 19
    ATTRIBUTE       shift and go to state 26

    predicate                      shift and go to state 15
    spatial_predicate              shift and go to state 2
    condition_or_empty             shift and go to state 16
    attribute                      shift and go to state 4
    condition                      shift and go to state 22
    temporal_predicate             shift and go to state 9
    expression                     shift and go to state 29
    empty                          shift and go to state 13

state 1

    (41) spatial_predicate -> OVERLAPS . LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 30


state 2

    (26) predicate -> spatial_predicate .

    AND             reduce using rule 26 (predicate -> spatial_predicate .)
    OR              reduce using rule 26 (predicate -> spatial_predicate .)
    $end            reduce using rule 26 (predicate -> spatial_predicate .)
    RBRACKET        reduce using rule 26 (predicate -> spatial_predicate .)
    RPAREN          reduce using rule 26 (predicate -> spatial_predicate .)


state 3

    (35) spatial_predicate -> INTERSECTS . LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 31


state 4

    (57) expression -> attribute .

    PLUS            reduce using rule 57 (expression -> attribute .)
    MINUS           reduce using rule 57 (expression -> attribute .)
    TIMES           reduce using rule 57 (expression -> attribute .)
    DIVIDE          reduce using rule 57 (expression -> attribute .)
    AND             reduce using rule 57 (expression -> attribute .)
    OR              reduce using rule 57 (expression -> attribute .)
    $end            reduce using rule 57 (expression -> attribute .)
    RBRACKET        reduce using rule 57 (expression -> attribute .)
    RPAREN          reduce using rule 57 (expression -> attribute .)
    COMMA           reduce using rule 57 (expression -> attribute .)
    EQ              reduce using rule 57 (expression -> attribute .)
    NE              reduce using rule 57 (expression -> attribute .)
    LT              reduce using rule 57 (expression -> attribute .)
    LE              reduce using rule 57 (expression -> attribute .)
    GT              reduce using rule 57 (expression -> attribute .)
    GE              reduce using rule 57 (expression -> attribute .)
    NOT             reduce using rule 57 (expression -> attribute .)
    BETWEEN         reduce using rule 57 (expression -> attribute .)
    LIKE            reduce using rule 57 (expression -> attribute .)
    ILIKE           reduce using rule 57 (expression -> attribute .)
    IN              reduce using rule 57 (expression -> attribute .)
    IS              reduce using rule 57 (expression -> attribute .)
    BEFORE          reduce using rule 57 (expression -> attribute .)
    DURING          reduce using rule 57 (expression -> attribute .)
    AFTER           reduce using rule 57 (expression -> attribute .)


state 5

    (39) spatial_predicate -> TOUCHES . LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 32


state 6

    (8) condition -> LBRACKET . condition RBRACKET
    (54) expression -> LBRACKET . expression RBRACKET
    (3) condition -> . predicate
    (4) condition -> . condition AND condition
    (5) condition -> . condition OR condition
    (6) condition -> . NOT condition
    (7) condition -> . LPAREN condition RPAREN
    (8) condition -> . LBRACKET condition RBRACKET
    (49) expression -> . expression PLUS expression
    (50) expression -> . expression MINUS expression
    (51) expression -> . expression TIMES expression
    (52) expression -> . expression DIVIDE expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . LBRACKET expression RBRACKET
    (55) expression -> . GEOMETRY
    (56) expression -> . ENVELOPE
    (57) expression -> . attribute
    (58) expression -> . QUOTED
    (59) expression -> . INTEGER
    (60) expression -> . FLOAT
    (9) predicate -> . expression EQ expression
    (10) predicate -> . expression NE expression
    (11) predicate -> . expression LT expression
    (12) predicate -> . expression LE expression
    (13) predicate -> . expression GT expression
    (14) predicate -> . expression GE expression
    (15) predicate -> . expression NOT BETWEEN expression AND expression
    (16) predicate -> . expression BETWEEN expression AND expression
    (17) predicate -> . expression NOT LIKE QUOTED
    (18) predicate -> . expression LIKE QUOTED
    (19) predicate -> . expression NOT ILIKE QUOTED
    (20) predicate -> . expression ILIKE QUOTED
    (21) predicate -> . expression NOT IN LPAREN expression_list RPAREN
    (22) predicate -> . expression IN LPAREN expression_list RPAREN
    (23) predicate -> . expression IS NOT NULL
    (24) predicate -> . expression IS NULL
    (25) predicate -> . temporal_predicate
    (26) predicate -> . spatial_predicate
    (63) attribute -> . ATTRIBUTE
    (27) temporal_predicate -> . expression BEFORE TIME
    (28) temporal_predicate -> . expression BEFORE OR DURING time_period
    (29) temporal_predicate -> . expression DURING time_period
    (30) temporal_predicate -> . expression DURING OR AFTER time_period
    (31) temporal_predicate -> . expression AFTER TIME
    (35) spatial_predicate -> . INTERSECTS LPAREN expression COMMA expression RPAREN
    (36) spatial_predicate -> . DISJOINT LPAREN expression COMMA expression RPAREN
    (37) spatial_predicate -> . CONTAINS LPAREN expression COMMA expression RPAREN
    (38) spatial_predicate -> . WITHIN LPAREN expression COMMA expression RPAREN
    (39) spatial_predicate -> . TOUCHES LPAREN expression COMMA expression RPAREN
    (40) spatial_predicate -> . CROSSES LPAREN expression COMMA expression RPAREN
    (41) spatial_predicate -> . OVERLAPS LPAREN expression COMMA expression RPAREN
    (42) spatial_predicate -> . EQUALS LPAREN expression COMMA expression RPAREN
    (43) spatial_predicate -> . RELATE LPAREN expression COMMA expression COMMA QUOTED RPAREN
    (44) spatial_predicate -> . DWITHIN LPAREN expression COMMA expression COMMA number COMMA UNITS RPAREN
    (45) spatial_predicate -> . BEYOND LPAREN expression COMMA expression COMMA number COMMA UNITS RPAREN
    (46) spatial_predicate -> . BBOX LPAREN expression COMMA number COMMA number COMMA number COMMA number COMMA QUOTED RPAREN

    NOT             shift and go to state 28
    LPAREN          shift and go to state 20
    LBRACKET        shift and go to state 6
    GEOMETRY        shift and go to state 25
    ENVELOPE        shift and go to state 18
    QUOTED          shift and go to state 17
    INTEGER         shift and go to state 12
    FLOAT           shift and go to state 27
    ATTRIBUTE       shift and go to state 26
    INTERSECTS      shift and go to state 3
    DISJOINT        shift and go to state 8
    CONTAINS        shift and go to state 24
    WITHIN          shift and go to state 14
    TOUCHES         shift and go to state 5
    CROSSES         shift and go to state 7
    OVERLAPS        shift and go to state 1
    EQUALS          shift and go to state 23
    RELATE          shift and go to state 11
    DWITHIN         shift and go to state 10
    BEYOND          shift and go to state 21
    BBOX            shift and go to state 19

    predicate                      shift and go to state 15
    spatial_predicate              shift and go to state 2
    attribute                      shift and go to state 4
    temporal_predicate             shift and go to state 9
    expression                     shift and go to state 34
    condition                      shift and go to state 33

state 7

    (40) spatial_predicate -> CROSSES . LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 35


state 8

    (36) spatial_predicate -> DISJOINT . LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 36


state 9

    (25) predicate -> temporal_predicate .

    AND             reduce using rule 25 (predicate -> temporal_predicate .)
    OR              reduce using rule 25 (predicate -> temporal_predicate .)
    $end            reduce using rule 25 (predicate -> temporal_predicate .)
    RBRACKET        reduce using rule 25 (predicate -> temporal_predicate .)
    RPAREN          reduce using rule 25 (predicate -> temporal_predicate .)


state 10

    (44) spatial_predicate -> DWITHIN . LPAREN expression COMMA expression COMMA number COMMA UNITS RPAREN

    LPAREN          shift and go to state 37


state 11

    (43) spatial_predicate -> RELATE . LPAREN expression COMMA expression COMMA QUOTED RPAREN

    LPAREN          shift and go to state 38


state 12

    (59) expression -> INTEGER .

    PLUS            reduce using rule 59 (expression -> INTEGER .)
    MINUS           reduce using rule 59 (expression -> INTEGER .)
    TIMES           reduce using rule 59 (expression -> INTEGER .)
    DIVIDE          reduce using rule 59 (expression -> INTEGER .)
    AND             reduce using rule 59 (expression -> INTEGER .)
    OR              reduce using rule 59 (expression -> INTEGER .)
    $end            reduce using rule 59 (expression -> INTEGER .)
    RBRACKET        reduce using rule 59 (expression -> INTEGER .)
    RPAREN          reduce using rule 59 (expression -> INTEGER .)
    COMMA           reduce using rule 59 (expression -> INTEGER .)
    EQ              reduce using rule 59 (expression -> INTEGER .)
    NE              reduce using rule 59 (expression -> INTEGER .)
    LT              reduce using rule 59 (expression -> INTEGER .)
    LE              reduce using rule 59 (expression -> INTEGER .)
    GT              reduce using rule 59 (expression -> INTEGER .)
    GE              reduce using rule 59 (expression -> INTEGER .)
    NOT             reduce using rule 59 (expression -> INTEGER .)
    BETWEEN         reduce using rule 59 (expression -> INTEGER .)
    LIKE            reduce using rule 59 (expression -> INTEGER .)
    ILIKE           reduce using rule 59 (expression -> INTEGER .)
    IN              reduce using rule 59 (expression -> INTEGER .)
    IS              reduce using rule 59 (expression -> INTEGER .)
    BEFORE          reduce using rule 59 (expression -> INTEGER .)
    DURING          reduce using rule 59 (expression -> INTEGER .)
    AFTER           reduce using rule 59 (expression -> INTEGER .)


state 13

    (2) condition_or_empty -> empty .

    $end            reduce using rule 2 (condition_or_empty -> empty .)


state 14

    (38) spatial_predicate -> WITHIN . LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 39


state 15

    (3) condition -> predicate .

    AND             reduce using rule 3 (condition -> predicate .)
    OR              reduce using rule 3 (condition -> predicate .)
    $end            reduce using rule 3 (condition -> predicate .)
    RBRACKET        reduce using rule 3 (condition -> predicate .)
    RPAREN          reduce using rule 3 (condition -> predicate .)


state 16

    (0) S' -> condition_or_empty .



state 17

    (58) expression -> QUOTED .

    PLUS            reduce using rule 58 (expression -> QUOTED .)
    MINUS           reduce using rule 58 (expression -> QUOTED .)
    TIMES           reduce using rule 58 (expression -> QUOTED .)
    DIVIDE          reduce using rule 58 (expression -> QUOTED .)
    AND             reduce using rule 58 (expression -> QUOTED .)
    OR              reduce using rule 58 (expression -> QUOTED .)
    $end            reduce using rule 58 (expression -> QUOTED .)
    RBRACKET        reduce using rule 58 (expression -> QUOTED .)
    RPAREN          reduce using rule 58 (expression -> QUOTED .)
    COMMA           reduce using rule 58 (expression -> QUOTED .)
    EQ              reduce using rule 58 (expression -> QUOTED .)
    NE              reduce using rule 58 (expression -> QUOTED .)
    LT              reduce using rule 58 (expression -> QUOTED .)
    LE              reduce using rule 58 (expression -> QUOTED .)
    GT              reduce using rule 58 (expression -> QUOTED .)
    GE              reduce using rule 58 (expression -> QUOTED .)
    NOT             reduce using rule 58 (expression -> QUOTED .)
    BETWEEN         reduce using rule 58 (expression -> QUOTED .)
    LIKE            reduce using rule 58 (expression -> QUOTED .)
    ILIKE           reduce using rule 58 (expression -> QUOTED .)
    IN              reduce using rule 58 (expression -> QUOTED .)
    IS              reduce using rule 58 (expression -> QUOTED .)
    BEFORE          reduce using rule 58 (expression -> QUOTED .)
    DURING          reduce using rule 58 (expression -> QUOTED .)
    AFTER           reduce using rule 58 (expression -> QUOTED .)


state 18

    (56) expression -> ENVELOPE .

    PLUS            reduce using rule 56 (expression -> ENVELOPE .)
    MINUS           reduce using rule 56 (expression -> ENVELOPE .)
    TIMES           reduce using rule 56 (expression -> ENVELOPE .)
    DIVIDE          reduce using rule 56 (expression -> ENVELOPE .)
    AND             reduce using rule 56 (expression -> ENVELOPE .)
    OR              reduce using rule 56 (expression -> ENVELOPE .)
    $end            reduce using rule 56 (expression -> ENVELOPE .)
    RBRACKET        reduce using rule 56 (expression -> ENVELOPE .)
    RPAREN          reduce using rule 56 (expression -> ENVELOPE .)
    COMMA           reduce using rule 56 (expression -> ENVELOPE .)
    EQ              reduce using rule 56 (expression -> ENVELOPE .)
    NE              reduce using rule 56 (expression -> ENVELOPE .)
    LT              reduce using rule 56 (expression -> ENVELOPE .)
    LE              reduce using rule 56 (expression -> ENVELOPE .)
    GT              reduce using rule 56 (expression -> ENVELOPE .)
    GE              reduce using rule 56 (expression -> ENVELOPE .)
    NOT             reduce using rule 56 (expression -> ENVELOPE .)
    BETWEEN         reduce using rule 56 (expression -> ENVELOPE .)
    LIKE            reduce using rule 56 (expression -> ENVELOPE .)
    ILIKE           reduce using rule 56 (expression -> ENVELOPE .)
    IN              reduce using rule 56 (expression -> ENVELOPE .)
    IS              reduce using rule 56 (expression -> ENVELOPE .)
    BEFORE          reduce using rule 56 (expression -> ENVELOPE .)
    DURING          reduce using rule 56 (expression -> ENVELOPE .)
    AFTER           reduce using rule 56 (expression -> ENVELOPE .)


state 19

    (46) spatial_predicate -> BBOX . LPAREN expression COMMA number COMMA number COMMA number COMMA number COMMA QUOTED RPAREN

    LPAREN          shift and go to state 40


state 20
